[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs"
path = "bin/kvs.rs"

[dependencies]
clap = { version = "4.5.2", features = ["cargo"] }
walkdir = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
failure = "0.1.8"
serde_json = "1.0.114"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.10.1"
