[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["cargo"] }
walkdir = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
bincode = "1.3.3"
serde_json = "1.0.115"
thiserror = "1.0.58"
log = "0.4.21"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.5.1"
predicates = "3.1.0"
rand = "0.8.5"
tempfile = "3.10.1"
walkdir = "2.5.0"
